2013-06-01 Roman
- SYS:Core library version is returned to "2:1:0".
- UI.{VCAEngine,Vision,WebVision}: To view "Trend" of primitive "Diagram" added attribute "sclHorPer"
    for force (disable automatic mode) grid period of horizontal scale set.
- FIX:UI.Vision: Prevent exit on close last run-project window if it have not correct session opened.
- UI.Vision: The warning dialog for request to select present session or to create new is rewrote for allow cancel and mostly to clean.
    Antialiasing enable for draw lines width more 2 is added to primitive "Diagram".
- UI.{Vision,WebVision}: Values dimension limit, for primitive "Diagram", is expand to 5 symbols for prevent early using exponential form.
- FIX:UI.{Vision,WebVision}: Absolute rounding to hours of view "Trend" of primitive "Diagram" for horizontal scale length more hours is fixed
    by hours count into Unix time value "0" (for zone 2 is 1.1.1970 3:0:0), on the grid draw.


2013-05-25 Roman
- !:DB: To OscadaLibs.db added counter VKT-7 from TeploCom (http://www.teplocom.spb.ru) support.
- FIX:SYS: Fix copy default config from "oscada_start.xml" for user's projects by environment "OSCADA_ProjName".
    To oscada_start.xml "OpenSCADA control interface" on port 10005 is added.
- FIX:DAQ.Template: Omit for copy "DB" field on the template library node copy.
- !!!:UI.{VCAEngine,Vision,WebVision}: To primitive "Diagram" trends build from direct data is added, by prefix "data:" and "line:".
- !:FIX:UI.Vision: Function WdgView::attrsSet() is added and used for group attributes set into one request,
    for prevent several linked events lost on processing and general performance rise on network.
- UI.WebVision: Functions modStart() and modStop() is added for the events from OpenSCADA core process.


2013-05-19 Roman
- SYS: Core library version is set to 1.1.0, for OpenSCADA version 0.8.1 reflection.
    Package libqtwebkit-dev to Debian packages build dependencies, into "control", is added.