@@ -1,3 +1,7 @@
+2013-06-07 Roman
+- DAQ.Template,DAQ.{JavaLikeCalc,ModBus},Protocol.UserProtocol, UI.WebUser: Procedure text limit for the DB field is expand to 1000000.
+
+
 2013-06-01 Roman
 - SYS:Core library version is returned to "2:1:0".
 - UI.{VCAEngine,Vision,WebVision}: To view "Trend" of primitive "Diagram" added attribute "sclHorPer"
